--- a/styles.css
+++ b/styles.css
@@ -1,106 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-html {
-    box-sizing: border-box;
-}
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-}
 
 header {
     background-color: #123A49;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 800px;
-    padding: 20px;
+    align-items: center;
+    height: 700px;
     text-align: center;
-    flex-direction: column;
+    position: relative;
+    
 }
 
 .header-container {
-    max-width: 1200px;
     width: 100%;
+    max-width: 1200px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 
-.header-container img {
-    max-width: 100%;
+.image-text-container img {
+    max-width: 180px;
     height: auto;
     margin-bottom: 20px;
 }
 
 .principal-title {
-    margin: 0 auto;
+
     position: relative;
+    text-align: left;
+    width: 100%;
 }
 
-.header-container h1, .header-container h2 {
+.principal-title h1,
+.principal-title h2 {
     font-family: 'Josefin Sans', sans-serif;
-    font-style: italic;
-    font-size: calc(8vw + 10px);
+    font-style: italic; 
+}
+
+.principal-title h1.buy-poison {
+    font-size: calc(5.5rem + 2vw);
     font-weight: 700;
+    color: #ffffff;
     margin: 0;
-    position: relative;
 }
 
-.header-container h1 {
-    color: white;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-10%, 20%);
-}
-
-.header-container h2 {
+.principal-title h2.trust-us {
+    font-size: calc(5.5rem + 2vw);
+    font-weight: 700;
     color: transparent;
-    -webkit-text-stroke: 2px #FF8882;
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-10%, 67%);
+    -webkit-text-stroke: 1px #FF8882;
+    margin-left: 25px;
+    margin-top: -75px;
+}
+
+.frame-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 20px;
 }
 
 .frame {
-    width: 100%;
-    max-width: 660px;
-    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     padding: 0;
+    margin: 0;
+    list-style: none;
     text-align: left;
-    margin-right: 75%;
-    margin-top: 20%;
-    position: relative;
-   
-
+    width: 50%;
 }
 
-.frame li {
+.text-box {
+    width: 100%;
+  
+    box-sizing: border-box;
     margin-bottom: 20px;
+    background-color: #123A49;
+    border-radius: 5px;
 }
 
-.header-container p {
+.text-box p {
     font-family: 'Lato', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 300;
-    color: white;
+    color: #cccccc;
+    line-height: 1.5;
 }
 
 .button-container {
     position: relative;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+    width: 100%;
 }
 
 .rectangule1, .rectangule2 {
@@ -109,99 +109,180 @@ header {
     position: absolute;
     background-color: white;
     height: 7px;
-    width: 20%;
-    max-width: 42px;
+    width: 42px;
 }
 
 .rectangule1 {
     z-index: 2;
-
-    top: 10px;
-    left: 50%;
-    transform: translateX(-400%);
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .rectangule2 {
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(300%);
+    z-index: 2;
+    top: 50%;
+    right: 0;
+    transform: translateY(50%) translateX(50%);
 }
 
-.header-container button {
+button.uppercase {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1.5rem;
     text-transform: uppercase;
-    width: 100%;
-    max-width: 300px;
-    height: 62px;
     background-color: rgba(255, 255, 255, 0.800);
     border: none;
     padding: 10px 20px;
     color: #123A49;
     cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
-    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición suave para la transformación y sombra */
+    z-index: 1;
 }
 
-.header-container button:hover {
-    transform: translateY(-5px); /* Mueve el botón ligeramente hacia arriba */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Añade una sombra más prominente */
+button.uppercase:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.poison-img {
-    position: absolute;
-    right: 1%;
-    max-width: 100%;
+.poison-img-container {
+    flex: 1;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    position: relative; /* Añadido para permitir el ajuste de la posición */
+    top: -400px; /* Ajusta este valor según sea necesario para mover la imagen hacia arriba */
+}
+
+.poison-img-container img {
+    max-width: 500px;
     height: auto;
 }
 
-.header-container .responsibility h4 {
+
+.responsibility {
+    z-index: 30;
     position: absolute;
-    color: white;
-    font-family: 'Lato', sans-serif;
-    top: 110%;
-    font-size: 12px;
+    bottom: 1000px;
+    right: 10px;
+    width: 80%;
     text-align: right;
-    bottom: 0;
-    right: 10%;
+    top:600px;
+    height: auto;
 }
 
-@media (max-width: 768px) {
-    .header-container {
+.responsibility h4 {
+    height: auto;
+    font-size: 0.75rem;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    line-height: 1.5;
+}
+
+
+
+
+@media (max-width: 1000px) {
+    header {
+        height: auto;
+        padding-bottom: 20px;
+    }
+
+    .principal-title h1.buy-poison,
+    .principal-title h2.trust-us {
+        font-size: calc(2rem + 3vw);
+        margin-top: 0;
+        margin-left: 0;
         text-align: center;
     }
-    
-    .frame {
+
+    .principal-title h2.trust-us {
+        margin-top: -30px; 
+        margin-left: -40px;/* Ajusta este valor para moverlo más arriba */
+    }
+    .content-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .frame-container {
         width: 100%;
-        transform: translatey(50%);
-        margin: 20px auto;
-        text-align: left;
-    
+        margin: 0;
+        align-items: center;
     }
 
-    .poison-img {
-        display: none;
-    }
-
-    .header-container h1, .header-container h2 {
-        transform: translate(0, 0);
-      
-    
-    }
-
-    .header-container h2 {
-        margin-top: 6%;
-        -webkit-text-stroke-width: 1px;
-    }
-
-    .header-container h1 {
-        top: 70%;
+    .frame {
+        width: 90%;
+        margin: 0 auto;
+        align-items: center;
     }
 
     .button-container {
-        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
     }
-    .responsibility h4{
-        margin-top: 20%;
+
+    .poison-img-container {
+        display: none; /* Oculta la imagen del veneno en dispositivos móviles */
+    }
+
+    .responsibility {
+        position: relative;
+        bottom: auto;
+        top: auto;
+        margin-top: 20px;
+        width: 90%;
+        text-align: right; /* Alinea el texto de responsabilidad a la derecha */
+    }
+
+    .responsibility h4 {
+        font-size: 0.75rem;
+        line-height: 1.2;
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+/* footer */
+footer {
+    background-color: #164856;
+    color: white;
+    padding: 20px 0;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-container .logo {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
+    text-shadow: 1px 1px 2px #000000;
+}
+
+.footer-container .separator {
+    border-left: 1px solid #ffffff;
+    height: 5rem;
+    margin: 0 20px;
+}
+
+.footer-container .legal-info {
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    text-align: right;
+    color: #b0c4de;
 }
