--- a/styles.css
+++ b/styles.css
@@ -286,3 +286,19 @@ footer {
     text-align: right;
     color: #b0c4de;
 }
+
+
+
+
+/* scroll */
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+}
