--- a/section.css
+++ b/section.css
@@ -23,10 +23,11 @@
     font-size: 1.5rem;
     color: #123A49;
     position: absolute;
-    top: -40px;
-    left: 0;
+    top: -80px;
+    left: -10px;
     display: flex;
     padding: 10px;
+    margin-bottom: 100px;
 }
 
 .section-title h2 {
@@ -47,7 +48,7 @@
 .section-title .highlight {
     font-family: 'Josefin Sans', sans-serif;
     color: transparent;
-    -webkit-text-stroke: 2px #FF8882;
+    -webkit-text-stroke: 1px #FF8882;
     margin-left: 4%;
     position: relative;
     z-index: 4;
@@ -132,13 +133,18 @@
     }
     .background-rectangle {
         position: absolute;
-        width: 40%;
-        height: 26%;
+        width: 55%;
+        height: 36%;
         background: #9dbeb946;
         z-index: -1;
-        top: 0.5%;
+        top: -4.5%;
         margin-left: 75%; 
         margin-bottom: 15%;
     }
     
+.section-title p {
+    margin-right: 120px;
+    margin-bottom: 20%;
+
+}
 }
