--- a/section.css
+++ b/section.css
@@ -45,6 +45,7 @@
 }
 
 
+
 .section-title .highlight {
     font-family: 'Josefin Sans', sans-serif;
     color: transparent;
@@ -120,16 +121,25 @@
     width: 100%;
 }
 
+@media (max-width: 1000px){
+    .section-title .highlight{
+        top: -50px; 
+    }
+    .section-number {
+        margin-left: -2px;
+    }
+}
+
 @media (max-width: 768px){
 
     .section-title .highlight {
         font-family: 'Josefin Sans', sans-serif;
         color: transparent;
-        -webkit-text-stroke: 2px #FF8882;
-        margin-left: 4%;
+        -webkit-text-stroke: 1px #FF8882;
+        margin-left: 5%;
         position: relative;
         z-index: 4;
-        top: -20px; 
+        top: -27px; 
     }
     .background-rectangle {
         position: absolute;
@@ -143,7 +153,7 @@
     }
     
 .section-title p {
-    margin-right: 120px;
+    margin-right: 130px;
     margin-bottom: 20%;
 
 }
