--- a/section2.css
+++ b/section2.css
@@ -1,3 +1,4 @@
+/* Sección Flavours */
 .flavours {
     padding: 50px 0;
     margin-top: 50px;
@@ -7,12 +8,12 @@
 .flavours .section-title {
     margin-bottom: 30px;
     position: relative;
-    
 }
 
 .flavours .section-title .section-number2 {
     background-image: url(./assets/Rayitas-white.png);
     background-size: cover;
+    text-align: left;
     width: 326px;
     height: 99px;
     font-family: 'Josefin Sans', sans-serif;
@@ -27,6 +28,7 @@
     padding: 10px;
     text-align: right;
     margin-top: 10px;
+    font-style: italic;
 }
 
 .flavours .section-title h2 {
@@ -46,29 +48,30 @@
     -webkit-text-stroke: 1px white;
 }
 
+/* Media Queries para .flavours */
 @media (max-width: 768px) {
-
-    .section-number2{
+    .section-number2 {
         margin-bottom: 100px;
     }
+
     .flavours .section-title .section-number2 {
         width: 326px;
-        height: 60px;
+        height: 100px;
         font-size: 57.18px;
         top: -20px;
-        margin-bottom: 100px!important;
+        margin-bottom: 100px !important;
     }
 
     .flavours .section-title h2 {
         font-size: 57.18px;
-        top: 20px;
+        padding-top: 40px;
     }
 }
 
 @media (max-width: 576px) {
     .flavours .section-title .section-number2 {
-        width: 150px;
-        height: 50px;
+        width: 326px;
+        height: 100px;
         font-size: 27px;
         top: -20px;
     }
@@ -79,6 +82,7 @@
     }
 }
 
+/* Estilos de las Tarjetas */
 .card {
     border: none;
     border-radius: 5%;
@@ -110,7 +114,7 @@
 
 .card-body {
     text-align: left;
-    padding-bottom: 0!important;
+    padding-bottom: 0 !important;
 }
 
 .card-title {
@@ -124,28 +128,31 @@
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
     color: #123A49;
-   
 }
 
-.card .btn{
+.card .btn {
     margin-left: 110px;
-    border-radius: 10px;
+    border-radius: 20px;
+
 }
+
 .hidden {
     display: none !important;
 }
 
+/* Estilos de los Botones */
 .btn {
     background-color: #f7797d !important;
     border: none !important;
     font-family: 'Lato', sans-serif;
     font-size: 0.9rem;
     font-weight: 700;
-    
     color: white !important;
     margin: 10px;
     display: inline-block;
     cursor: pointer;
+    width: 115px;
+    height: 35px;
 
 }
 
@@ -153,6 +160,7 @@
     background-color: #6c757d !important;
 }
 
+/* Estilos del Carrusel */
 .carousel-container {
     position: relative;
     overflow: hidden;
@@ -184,6 +192,7 @@
     }
 }
 
+/* Reglas específicas del carrusel para pantallas mayores a 1000px */
 @media (min-width: 1000px) {
     .carousel-control-prev,
     .carousel-control-next {
