--- a/section2.css
+++ b/section2.css
@@ -1,3 +1,5 @@
+/* Estilos Globales */
+
 /* Sección Flavours */
 .flavours {
     padding: 50px 0;
@@ -48,44 +50,10 @@
     -webkit-text-stroke: 1px white;
 }
 
-/* Media Queries para .flavours */
-@media (max-width: 768px) {
-    .section-number2 {
-        margin-bottom: 100px;
-    }
-
-    .flavours .section-title .section-number2 {
-        width: 326px;
-        height: 100px;
-        font-size: 57.18px;
-        top: -20px;
-        margin-bottom: 100px !important;
-    }
-
-    .flavours .section-title h2 {
-        font-size: 57.18px;
-        padding-top: 40px;
-    }
-}
-
-@media (max-width: 576px) {
-    .flavours .section-title .section-number2 {
-        width: 326px;
-        height: 100px;
-        font-size: 27px;
-        top: -20px;
-    }
-
-    .flavours .section-title h2 {
-        font-size: 57.18px;
-        top: 15px;
-    }
-}
-
 /* Estilos de las Tarjetas */
 .card {
     border: none;
-    border-radius: 5%;
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     padding: 0px;
@@ -128,12 +96,12 @@
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
     color: #123A49;
+    margin-bottom: 0;
 }
 
 .card .btn {
-    margin-left: 110px;
+    margin-left: 90px;
     border-radius: 20px;
-
 }
 
 .hidden {
@@ -153,12 +121,71 @@
     cursor: pointer;
     width: 115px;
     height: 35px;
-
+    border-radius: 50px; /* Bordes totalmente redondeados */
 }
 
 .btn-secondary {
     background-color: #6c757d !important;
 }
+
+
+
+/* Media Queries */
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+    .card .btn {
+        margin-left: 50px !important;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 999px) {
+    
+    .card .btn {
+        margin-left: 0px !important;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .section-number2 {
+        margin-bottom: 100px;
+    }
+
+    .flavours .section-title .section-number2 {
+        width: 326px;
+        height: 100px;
+        font-size: 57.18px;
+        top: -20px;
+        margin-bottom: 100px !important;
+    }
+
+    .flavours .section-title h2 {
+        font-size: 57.18px;
+        padding-top: 40px;
+    }
+
+    .card .btn {
+        margin-left: 160px !important;
+    }
+}
+
+@media (max-width: 576px) {
+    .flavours .section-title .section-number2 {
+        width: 326px;
+        height: 100px;
+        font-size: 27px;
+        top: -20px;
+    }
+
+    .flavours .section-title h2 {
+        font-size: 57.18px;
+        top: 15px;
+    }
+
+ }
+
+
+/* Reglas específicas del Carrusel */
 
 /* Estilos del Carrusel */
 .carousel-container {
@@ -166,7 +193,7 @@
     overflow: hidden;
 }
 
-/* Reglas específicas del carrusel para pantallas menores a 1000px */
+
 @media (max-width: 999px) {
     #card-row {
         display: flex;
@@ -190,6 +217,7 @@
     #reset-btn {
         display: none;
     }
+
 }
 
 /* Reglas específicas del carrusel para pantallas mayores a 1000px */
