--- a/section2.css
+++ b/section2.css
@@ -1,4 +1,3 @@
-/* Estilos Globales */
 
 /* Sección Flavours */
 .flavours {
@@ -121,7 +120,7 @@
     cursor: pointer;
     width: 115px;
     height: 35px;
-    border-radius: 50px; /* Bordes totalmente redondeados */
+    border-radius: 50px; 
 }
 
 .btn-secondary {
@@ -200,11 +199,11 @@
         flex-wrap: nowrap;
         overflow-x: auto;
         scroll-behavior: smooth;
-        -webkit-overflow-scrolling: touch; /* Habilitar el desplazamiento suave en iOS */
+        -webkit-overflow-scrolling: touch; 
     }
 
     .card-container {
-        flex: 0 0 65%; /* Mostrar 1 tarjeta completa y parte de la siguiente */
+        flex: 0 0 65%;
         margin-right: 10px;
     }
 
